--- a/Info_way.html
+++ b/Info_way.html
@@ -171,6 +171,16 @@ integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WT
               </p>
             </div>
           </div>
+          <br>
+          <hr>
+        <footer>
+          <div class="footer">
+            <p>
+              Before Info Way Group's Training and Placement Program, I didn't know what to do. 
+              I was spending so many months after I graduated not being able to find a job and was getting so frustrated. 
+            </p>
+          </div>
+        </footer>
       </div>
       
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
